apps/nanostatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanostatus
  namespace: nanostatus
  annotations:
    metallb.universe.tf/address-pool: homelab-pool
spec:
  type: LoadBalancer
  selector:
    app: nanostatus
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
