apps/nanostatus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nanostatus
  namespace: nanostatus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "nanostatus.lan.tapslab.com"
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "nanostatus.lan.tapslab.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nanostatus
      port: 80
